# commitr

./: .gitignore  pyproject.toml
pkg/: config.py  git.py  llm.py  main.py  utils.py
